--- a/ClinicAppointmentGroupProject/appsettings.json
+++ b/ClinicAppointmentGroupProject/appsettings.json
@@ -7,7 +7,18 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=clinicsystem;Trusted_Connection=true;MultipleActiveResultSets=true"
+  }
+
+} 
+
+
+
+/*
+
+"ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=clinicsystem;user=root;password=0987654321;"
 
   }
-}
+
+*/
