--- a/ClinicAppointmentGroupProject/appsettings.json
+++ b/ClinicAppointmentGroupProject/appsettings.json
@@ -1,15 +1,15 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=clinicsystem;user=root;password=0987654321;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=clinicsystem;Trusted_Connection=true;MultipleActiveResultSets=true"
-  }
-
+  "AllowedHosts": "*"
 } 
 
 
@@ -18,7 +18,13 @@
 
 "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=clinicsystem;user=root;password=0987654321;"
-
   }
+
+
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=clinicsystem;Trusted_Connection=true;MultipleActiveResultSets=true"
+  }
+  
 
 */
